# CameraLocalisationTestBed

./: README.md  vision_for_images  vision_for_video.cpp  vision_video.cpp
simulation_gazebo/: CMakeLists.txt  package.xml
simulation_gazebo/camera_plugin/src/: camera_plugin.cpp
simulation_gazebo/launch/: main.launch
simulation_gazebo/worlds/: light.world
vision/: CMakeLists.txt  package.xml  vision_for_video.cpp
